# test-101

./: .gitignore  AI_TRAINING_DATASET_SUMMARY.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  COMPLIANCE_FIX_SUMMARY.md  CONTEXT_PROPAGATION_FIX.md  EXECUTIVE_SUMMARY.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MISSION_COMPLETE.md  PYDANTIC_TRAINING_GUIDE.md  PYDANTIC_VERIFICATION_SYSTEM.md  QUICK_START_SALARY_COMPLIANCE.md  README.md  SALARY_COMPLIANCE_IMPLEMENTATION_SUMMARY.md  SALARY_RANGE_IMPLEMENTATION.md  SALARY_TRANSPARENCY_IMPLEMENTATION.md  VALIDATION_REPORT.md  VERIFICATION_CHECKLIST.md  accuracy_assessment_report.py  analysis_report.md  context_preservation_fix_summary.md  demo_verification_system.py  enhanced_pydantic_examples.py  evaluation_report.md  fix_summary.md  improved_main.py  improvements_summary.md  index.js  main.py  main_improved.py  pydantic_knowledge_updater.py  pydantic_training_examples.py  pydantic_verification_system.py  pyproject.toml  setup_pydantic_verification.py  similar_libraries_examples.py  test.py  (+8 more)
agents/: OVERVIEW.md
agents/LLM_Call/: FILES_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  agents.yaml  example_implementation.py  tasks.yaml  test_validation.py
src/job_posting/: compliance_checker.py  compliant_production_assistant_posting.md  crew.py  implementation_summary.md  job_description_example.md  main.py  production_assistant_template.md  research_agent.py  (+6 more)
templates/: job_posting_template.yaml
workflows/: __init__.py  job_posting_approval.py  test_validation.py
(+11 files in other folders)
