[project]
name = "test-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.2.14",
    "langgraph>=0.6.7",
    "neatlogs>=1.1.7",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "attrs>=23.1.0",
    "marshmallow>=3.20.0",
    "cerberus>=1.3.5",
    "voluptuous>=0.14.0",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.8.0",
    "email-validator>=2.1.0",
    "phonenumbers>=8.13.0",
    "pydantic-extra-types>=2.4.0",
]
